[gd_scene load_steps=2 format=3 uid="uid://bm6ma1ojpyuhi"]

[ext_resource type="Script" path="res://Scripts/JoinServer.gd" id="1_tewvn"]

[node name="JoinServer" type="Node2D"]
script = ExtResource("1_tewvn")

[node name="PlayerNameTextbox" type="LineEdit" parent="."]
offset_right = 230.0
offset_bottom = 31.0
placeholder_text = "Enter your playername here"

[node name="ServerIPTextbox" type="LineEdit" parent="."]
offset_top = 37.0
offset_right = 162.0
offset_bottom = 68.0
placeholder_text = "Enter server IP here"

[node name="JoinGameButton" type="Button" parent="."]
offset_left = 88.0
offset_top = 87.0
offset_right = 175.0
offset_bottom = 118.0
text = "Join Game"

[node name="GoBackButton" type="Button" parent="."]
offset_top = 87.0
offset_right = 71.0
offset_bottom = 118.0
text = "Go Back"

[connection signal="button_down" from="GoBackButton" to="." method="_on_go_back_button_down"]
